--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --cache-location .eslintcache",
-    "preview": "vite preview",
     "storybook": "storybook dev -p 6006 --no-open",
     "test-storybook": "test-storybook",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token="
+    "chromatic": "npx chromatic"
   },
   "sideEffects": [
     "**/*.css"
