--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -11,6 +11,7 @@
     "src/lib"
   ],
   "scripts": {
+    "start": "nx run tokens:storybook",
     "build": "node ./build-tokens.mjs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --cache-location .eslintcache",
     "storybook": "storybook dev -p 6007 --no-open",
